Closed
Bug 703109
Opened 14 years ago
Closed 14 years ago
[Azure] Add CreateOffscreenDrawTarget to gfxAndroidPlatform
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla11
People
(Reporter: mattwoodrow, Assigned: mattwoodrow)
References
Details
(Keywords: crash, Whiteboard: [mobile-crash])
Crash Data
Attachments
(1 file)
|
2.14 KB,
patch
|
bas.schouten
:
review+
|
Details | Diff | Splinter Review |
This is unimplemented for android and causes crashes if you enable skia.
Attachment #575003 -
Flags: review?(bas.schouten)
| Assignee | ||
Updated•14 years ago
|
Crash Signature: [@ nsCanvasRenderingContext2DAzure::InitializeWithTarget]
Keywords: crash
Whiteboard: [mobile-crash]
Updated•14 years ago
|
Attachment #575003 -
Flags: review?(bas.schouten) → review+
| Assignee | ||
Comment 1•14 years ago
|
||
Assignee: nobody → matt.woodrow
Comment 2•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla11
You need to log in
before you can comment on or make changes to this bug.
Description
•